Updated MailKit image and fixed horizontal scrolling bug

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ html {
     scroll-behavior: smooth;
     width: 100%;
     min-height: 100%;
+    overflow-x:hidden;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -41,6 +42,7 @@ body {
     margin: 0;
     font-family: 'Segoe UI', 'Open Sans', sans-serif;
     position: relative;
+    overflow-x:hidden;
 }
 
 #background {
